fix(sidebar): Prevent extra scrollbars from appearing in IE

--- a/src/components/ContentSidebar/SidebarContent.scss
+++ b/src/components/ContentSidebar/SidebarContent.scss
@@ -26,7 +26,6 @@
     .bcs-scroll-content-wrapper {
         bottom: 0;
         left: 0;
-        overflow: auto;
         padding-top: 15px;
         position: absolute; // Prevents non-sidebar parts from re-painting
         right: 0;
